tests/spec/core_functions/color/change_color/error/mod.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/change_color/error"

mod args;

mod bounds;

mod mixed_formats;

mod test_type;

mod units;
